css/style.css
.header{

	background-color: #5782f9;
	
	position: relative;
	transition:0.5s;
	height: 35vh;

}

.ps-picture.hide{
    opacity: 0;
}

span{
	display: block;
}

span span {
	display: inline;
}

body{
	padding: 0;
	background-color: #fcfcfc;
}

.container-fluid{
	padding: 0;
}

.body{
	
	padding: 0px 20%;
	color: #555;

}

.my-button{

	color: #ddd;
	padding: 15px;
	font-family: Open Sans,serif;
	text-align: center;
	font-size: 15pt;
	user-select: none;
	cursor: pointer;
	transition: 0.2s;

}

.my-button:hover{

	color: white;
}

.bottom{
	bottom: 0;
	width:70%;
	left: 50%;
	 -webkit-transform: translateX(-50%);
  	transform: translateX(-50%);
	position: absolute;
	transition:0.5s;
	flex-wrap: nowrap;
}

.ps-picture{
	
	cursor: pointer;
	display: inline-block;
	margin:auto;
	border: 7px solid #eee;
	transform: translate3d(0,0,0);

	position: absolute;
	z-index: 5;
	left: 0;
	right: 0;
	margin-top: 15px;
	width: 22vh;
	height: 22vh;
	border-radius: 50%;
	background-repeat: no-repeat;
	background-position: center top;
	background-size: cover;
	background-image: url("../image.jpeg");
	
}

.shifted{
	margin-left: 150px;
}

.display-3{
	font-weight: 400;
	font-family: Saira Extra Condensed,serif;
	font-size: 85pt;
}

.content-holder{
	position: absolute;
	left: 0;
	right: 0;
	width: 100%;
	margin: auto;
	padding: 30px 5%;
	overflow: scroll;
	overflow-y: auto;
	overflow-x: hidden;
	height:65vh;	
}

.normal-text{
	font-size: 18pt;
}

@media (max-width: 576px) {

	

	.normal-text{
		font-size: 3.5vw;
	}

	.display-3{
		font-size: 13vw;
		
	}

	.bottom{
		width:100%;

	}

}

table{
	width: 400px;
}

a{
	color:#555;
}

a:hover{
	text-decoration: underline;
	color: #555;
}

.heading-1{
	font-weight: 500;
	font-size: 21pt;
	font-family: Saira Extra Condensed,serif;
}

.heading-2{
	font-size: 14pt;
	color: #888;
	margin-left: 20px;
	margin-top: 10px;
	
}

.par-1 > .heading-2 ~ .heading-2{
	margin-top: 30px;

}


.body-1{
	font-size: 12pt;
	color:#aaa;
	margin-left: 40px;
	margin-top: 10px;
}


.par-1{
	margin-top: 55px;
}

.par-1:first-of-type{
	margin-top: 0;
}

.par-2{
	margin-top: 30px;
}

.par-2:first-child{
	margin-top: 0;
}

.centerBox{

	width: fit-content;
	position:absolute;
	left: 0;
	right: 0;
	margin:auto;

}

.loader {
    border: 16px solid #f3f3f3; /* Light grey */
    border-top: 16px solid #3498db; /* Blue */
    border-radius: 50%;
    width: 120px;
    height: 120px;
	animation: spin 2s linear infinite;
	position: absolute;
	left: 0;
	right:0;
	margin: auto;
	margin-top:20vh;
	opacity: 1;
	visibility: visible;
	transition: 0.5s;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

.opacity_hide{
	visibility: hidden;
	opacity: 0;
	
}

.outline{
	background-image: none;
	width: 24vh;
	height: 22vh;
	background-color: red;
	z-index: 4;
}

.activeTab{
	color:white;
}

.toggle-button{
	height: 10vh;
	width: 10vh;
	position: absolute;
	right:0;
	bottom: 0;
	text-align: center;
	z-index: 90;
	display: none;	

}

.ps-picture{
    transition: opacity 1s, transform 0.5s;
}

.ps-picture.ng-hide-remove{
    opacity: 0;
    
    
  
}

.ps-picture.ng-hide-remove-active{
    opacity: 1;
   
}

.ps-picture.ng-hide-add{
    opacity: 1;
  
}

.ps-picture.ng-hide-add-active{
    opacity: 0;
 
}


@media (max-width: 576px) {

	.ps-picture{
		
		opacity: 0;
		transform: translate3d(0,-100%,0);
	}

	.shifted{
		margin-left:15vw;
	}

	.content-holder{
		height: 88vh;
	}

	.header{
		
		height: 10vh;
	}

	.bottom{
		display: block;
		opacity: 0;
		
		position: absolute;
		
		
	}
	.my-button{
		font-size: 2.5vh;
		padding: 2.5vh;
		width: fit-content;
	}

	.toggle-button{
		display:block;
	}

	.centerBox{
		margin-top: 20vw;
	}

}



.header.shown{
	height: 35vh;
}

.bottom.shown{
	opacity: 1;
	
	
}

.content-holder.shown{
	height: 65vh;
}


button.toggle-button{
	background-color: transparent;
	border: transparent;
	transition: color 1.25s;
}

button.toggle-button:focus{
	
	outline: none;

}

button.toggle-button:not(:active){
	
	color:black;

}

button.toggle-button:active{
	
	color:white;
	transition: color 0.05s;

}

